# solid-guide

./: .gitignore  creators.py  main.py  pyproject.toml
CalculatorV1/: main.py
calculator/: operationCreators.py  operations.py
docs/MyFunctions/: funcs.py
operations/: addition.py  interface.py
